--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -32,8 +32,9 @@
 </div>
 
 <div class="marker">
-    <button name="Marker" type="button" type="buttonMarker" onclick="MarkerFunktion()">Marker</button>
+    <button name="Marker" type="button" onclick="MarkerFunktion()">Marker</button>
 </div>
+
 <!-- skal laves om!!!! -->
 <div class="dropdown">
     <button onclick="myFunction()" class="dropdownbtn">Dropdown</button>
