--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -1,38 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:http="http://www.w3.org/1999/xhtml">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <title>EKG side</title>
     <link rel="stylesheet" type="text/css" href="EKGside.css">
-    <script src="http:cdn.jsdelivr.net/npm/chart.js"></script>
     <script src=" EKGside.js"></script>
 </head>
 
 <body>
-<h1>EKG overview</h1>
-
-<div class="baggrund">
-
-</div>
-
-<!--topbar -->
-<!--Dette virker ikke -->
-<div class="topbar">
-    <p id="MyClockDisplay" class="clock"></p>
-</div>
-
-
-<div class="tilbageknap"> <!-- tjek dette efter, da det virker til at den ikke går igennem, men kun helt tilbage til login. -->
-    <button class="button1" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
-</div>
-
 <div>
     <input type="text" id="cpr" value="Indtast CPR" class="cpr">
-    <button name="sogCPR" type="button" type="buttonsogCPR" onclick="sogCPR()">søg</button>
+    <button name="sogCPR" class="button1" type="button" onclick="sogCPR()">søg</button>
 </div>
 
 <div class="marker">
-    <button name="Marker" type="button" onclick="MarkerFunktion()">Marker</button>
+    <button name="Marker" class="button1" type="button" onclick="MarkerFunktion()">Marker</button>
 </div>
 
 <!-- skal laves om!!!! -->
@@ -45,6 +27,7 @@
         <label value="Sesion 4">Sesion 4</label>
         <label value="Sesion 5">Sesion 5</label>
     </div>
+    <button class="button1" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
 </div>
 
 
