--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -11,7 +11,7 @@
 <body>
 <div>
     <label for="cpr"></label>
-    <input type="text" id="cpr" value="Indtast CPR" class="cpr">
+    <input type="text" id="cpr" placeholder="Indtast CPR" class="cpr">
     <button name="sogCPR" class="button1" type="button" onclick="sogCPR()">søg</button>
 </div>
 
@@ -28,9 +28,9 @@
         <label value="Session 4">Session 4</label>
         <label value="Session 5">Session 5</label>
     </div>
-    <button class="button1" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
+    <button name="tilbageknap" class="button1" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
 </div>
-<canvas id="mycanvas" height="600" width="800">
+<canvas id="mycanvas" height="100" width="200">
 
 </canvas>
 <canvas id="myChart">
