--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+<h1>
+    EKG overview
+</h1>
 <div>
     <label for="cpr"></label>
     <input type="text" id="cpr" placeholder="Indtast CPR" class="cpr">
