css lavet af Andreas

--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -18,8 +18,8 @@
     <button name="sogCPR" class="button1" type="button" onclick="sogCPR()">søg</button>
 </div>
 
-<div class="marker">
-    <button name="Marker" class="button1" type="button" onclick="MarkerFunktion()">Marker</button>
+<div>
+    <button name="Marker" class="marker" type="button" onclick="MarkerFunktion()">Marker</button>
 </div>
 
 <div class="dropdown">
