--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -21,6 +21,9 @@
 <div>
     <button name="Marker" class="marker" type="button" onclick="MarkerFunktion()">Marker</button>
 </div>
+<div>
+    <button name="tilbageknap" class="tilbageknap" type="button" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
+</div>
 
 <div class="dropdown">
     <button onclick="myFunction()" class="dropdownbtn">Dropdown</button>
@@ -31,7 +34,7 @@
         <label value="Session 4">Session 4</label>
         <label value="Session 5">Session 5</label>
     </div>
-    <button name="tilbageknap" class="button1" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
+
 </div>
 <canvas id="mycanvas" height="100" width="200">
 
