--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -15,7 +15,7 @@
 <div>
     <label for="cpr"></label>
     <input type="text" id="cpr" placeholder="Indtast CPR" class="cpr">
-    <button name="sogCPR" class="button1" type="button" onclick="sogCPR()">søg</button>
+    <button name="sogCPR" class="button1" type="button" onclick="sogCPR()">Søg</button>
 </div>
 
 <div>
@@ -34,15 +34,14 @@
         <label value="Session 4">Session 4</label>
         <label value="Session 5">Session 5</label>
     </div>
-
 </div>
+
 <canvas id="mycanvas" height="100" width="200">
 
 </canvas>
-<canvas id="myChart">
-
+<canvas
+        id="myChart">
 </canvas>
-
 
 </body>
 </html>
