fiks af aftaler lavet af Andreas

--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -15,7 +15,7 @@
 <div>
     <label for="cpr"></label>
     <input type="text" id="cpr" placeholder="Indtast CPR" class="cpr">
-    <button name="sogCPR" class="button1" type="button" onclick="sogCPR()">Søg</button>
+    <button name="sogCPR" class="button1" type="button" onclick="getSessions()">Søg</button>
 </div>
 
 <div>
