rettelser i frontend lavet af Andreas

--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -25,23 +25,13 @@
     <button name="tilbageknap" class="tilbageknap" type="button" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
 </div>
 
-<div class="dropdown">
-    <button onclick="myFunction()" class="dropdownbtn">Dropdown</button>
-    <div id="myDropdown" class="dropdown-content">
-        <label value="Session 1">Session 1</label>
-        <label value="Session 2">Session 2</label>
-        <label value="Session 3">Session 3</label>
-        <label value="Session 4">Session 4</label>
-        <label value="Session 5">Session 5</label>
-    </div>
-</div>
+<div class="sessionsfelt" id="sessionsfelt"></div>
 
-<canvas id="mycanvas" height="100" width="200">
 
-</canvas>
-<canvas
-        id="myChart">
-</canvas>
+<canvas id="myChart"></canvas>
+
+
+
 
 </body>
 </html>
