--- a/src/main/webapp/StartSide.html
+++ b/src/main/webapp/StartSide.html
@@ -19,7 +19,7 @@
 
 <div class="hotbar">
     <button class="button1" onclick="window.location.replace('EKGside.html')"> EkgSide</button>
-    <button class="button1" onclick="window.location.replace('Importside.html')"> Import</button>
+    <!--<button class="button1" onclick="window.location.replace('Importside.html')"> Import</button>-->
     <button class="button1" onclick="logud()">Log ud</button>
 </div>
 
