diverse rettelser lavet af Andreas

--- a/src/main/webapp/EKGside.html
+++ b/src/main/webapp/EKGside.html
@@ -19,10 +19,10 @@
 </div>
 
 <div>
-    <button id="tilbageknap" class="button1" type="button" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
+    <button id="goBackButton" class="button1" type="button" onclick="window.location.replace('StartSide.html')"> Tilbage </button>
 </div>
 
-<div class="sessionsfelt" id="sessionsfelt"></div>
+<div class="sessionsField" id="sessionsField"></div>
 <div class="commentField" id="commentField">
     <div class="row">
         <h2 id="titel">Kommentarfelt</h2>
@@ -38,9 +38,6 @@
 </div>
 
 <canvas id="myChart"></canvas>
-
-
-
 
 </body>
 </html>
