--- a/src/main/webapp/StartSide.html
+++ b/src/main/webapp/StartSide.html
@@ -24,8 +24,8 @@
 </div>
 
 <!--DETTE ER FOR BRUGERNAVN-->
-<div class="bruger">
-    <p id="brugernavn"><b>BRUGERNAVN</b></p>
+<div class="user">
+    <p id="username"><b>BRUGERNAVN</b></p>
 </div>
 <!--DETTE ER FOR MELLEMSTED-->
 
