--- a/src/main/webapp/patientStartSide.html
+++ b/src/main/webapp/patientStartSide.html
@@ -22,7 +22,7 @@
 </div>
 
 <!--DETTE ER FOR BRUGERNAVN-->
-<div class="bruger">
+<div class="user">
     <p id="brugernavn"><b>BRUGERNAVN</b></p>
 </div>
 <!--DETTE ER FOR MELLEMSTED-->
