diverse rettelser lavet af Andreas

--- a/src/main/webapp/StartSide.html
+++ b/src/main/webapp/StartSide.html
@@ -25,7 +25,7 @@
 
 <!--DETTE ER FOR BRUGERNAVN-->
 <div class="user">
-    <p id="username"><b>BRUGERNAVN</b></p>
+    <p id="brugernavn"><b>BRUGERNAVN</b></p>
 </div>
 <!--DETTE ER FOR MELLEMSTED-->
 
